# bhw-dc-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  config.json  format.sh  main.py  notes.txt  pyproject.toml  requirements.txt
bot/: main.py
bot/cogs/: ai.py  benchmark.py  help.py  meta.py  ping.py  react.py  tpm.py  utils.py  wishlists.py
